# linux-hpi5-writing-course

./: .gitignore  README.md  install.sh  pyproject.toml
gbtw/: __init__.py  content.py  db.py  main.py  profiles.py
gbtw/content/part1/: 19-mid-course-check-in.md  20-what-next.md
gbtw/content/part2/: p2-09-mid-course-check-in.md
gbtw/content/part4/: p4-08-midpoint-check-in.md
tests/: test_content.py  test_db.py  test_main_logic.py  test_profiles.py
